<resources>
<!--    <string name="app_name">KEPZET<sup><small>®</small></sup> client v0.24.03</string>-->
    <string name="app_name">PTL Client <sup><small>®</small></sup> 2024</string>
    <string name="action_settings">Settings</string>
    <string name="search">SEARCH</string>
    <string name="dbAccess">dbACCESS</string>
    <string name="position">POSITION</string>
    <string name="age">AGE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="position_fragment">PositionTAB</string>
    <string name="age_fragment">AgeTAB</string>
    <string name="strPalletNumberText">Pallet Nr:</string>
    <string name="strResultText">RESULTS</string>
    <string name="strPartNumberText">Part Nr:</string>
    <string name="strChannelText">Chnl:</string>
    <string name="str_btn_search">Search</string>
    <string name="str_btn_close">Close</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_text_size">25dp</string>
    <string name="main_text_padding_vertical">6dp</string>
    <string name="main_text_padding_start">6dp</string>
    <string name="TabPositionBtnSaveText">Save</string>
    <string name="TabPositionBtnSave">Save</string>
    <string name="appLabel">ZKW PTL Client 2024 v.</string>
</resources>
