<?xml version="1.0" encoding="utf-8"?>
<!--    https://www.youtube.com/watch?v=LXl7D57fgOQ&t=42s-->
<LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context=".DbActivity">
<!--                  <com.google.android.material.tabs.TabLayout>-->
<!--                  </com.google.android.material.tabs.TabLayout>-->
<!--                    https://www.youtube.com/watch?v=LXl7D57fgOQ&t=42s          -->
                    <android.support.design.widget.TabLayout
                              android:id="@+id/tabLayout"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                          >

                              <android.support.design.widget.TabItem
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/search">

                                  <Button
                                      android:id="@+id/buttonScan"
                                      android:layout_width="match_parent"
                                      android:layout_height="wrap_content"
                                      android:text="TEST"
                                       />
                              </android.support.design.widget.TabItem>
<!--                          android:icon="@drawable/ic_favorite_24db"-->

                              <android.support.design.widget.TabItem
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/dbAccess"
                                  />
<!--                          android:icon="@drawable/baseline_search_24"-->

                              <android.support.design.widget.TabItem
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/position"
                                  />
<!--                          android:icon="@drawable/my_star_24"-->

                              <android.support.design.widget.TabItem
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:text="@string/age"
                                  />

                  </android.support.design.widget.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</LinearLayout>