<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tabSearch">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tvPalletNmbText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/strPalletNumberText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/edtPalletNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtPalletNumber" />

    <TextView
        android:id="@+id/tvResultText"
        android:layout_width="55dp"
        android:layout_height="23dp"
        android:layout_marginTop="24dp"
        android:text="@string/strResultText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvPalletNmbText"
        app:layout_constraintTop_toBottomOf="@+id/tvPalletNmbText" />

    <TextView
        android:id="@+id/tvPartNrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/strPartNumberText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvResultText"
        app:layout_constraintTop_toBottomOf="@+id/tvResultText" />

    <TextView
        android:id="@+id/tvChannelText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/strChannelText"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPartNrText"
        app:layout_constraintEnd_toStartOf="@+id/edtChannel" />

    <TextView
        android:id="@+id/etresultSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="0123456789"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvResultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edtPalletNumber" />

    <TextView
        android:id="@+id/tvPackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Pack:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvPartNrText"
        app:layout_constraintTop_toBottomOf="@+id/tvPartNrText" />

    <EditText
        android:id="@+id/etPack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="00"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPackText"
        app:layout_constraintStart_toEndOf="@+id/tvPackText" />


    <TextView
        android:id="@+id/tvRTextSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="R:"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/etPack"
        app:layout_constraintTop_toBottomOf="@+id/tvPartNrText" />

    <EditText
        android:id="@+id/etR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="00"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPackText"
        app:layout_constraintStart_toEndOf="@+id/tvRTextSearch" />

    <TextView
        android:id="@+id/tvSText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="S:"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvRTextSearch"
        app:layout_constraintStart_toEndOf="@+id/etR"
        app:layout_constraintTop_toTopOf="@+id/tvRTextSearch" />

    <EditText
        android:id="@+id/etS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="00"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvSText"
        app:layout_constraintStart_toEndOf="@+id/tvSText" />

    <TextView
        android:id="@+id/tvPText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="P:"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSText"
        app:layout_constraintStart_toEndOf="@+id/etS"
        app:layout_constraintTop_toTopOf="@+id/tvSText" />

    <EditText
        android:id="@+id/etPSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="00"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPText"
        app:layout_constraintStart_toEndOf="@+id/tvPText" />


    <EditText
        android:id="@+id/edtPalletNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="0123456789"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/tvPalletNmbText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="796.04.000.001234"

        app:layout_constraintBottom_toBottomOf="@+id/tvPartNrText"
        app:layout_constraintEnd_toStartOf="@+id/tvChannelText"
        app:layout_constraintStart_toStartOf="@+id/edtPalletNumber"
        app:layout_constraintTop_toTopOf="@+id/tvPartNrText" />

    <EditText
        android:id="@+id/edtChannel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="00"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvChannelText"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/str_btn_search"
        app:layout_constraintBottom_toBottomOf="@+id/edtPalletNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtPalletNumber"
        app:layout_constraintTop_toTopOf="@+id/edtPalletNumber" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/str_btn_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>